--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         let M=now.getMinutes();
         let S=now.getSeconds();
         s.style.transform=`rotate(${S*6}deg)`;
-        m.style.transform=`rotate(${H*6}deg)`;
-        h.style.transform=`rotate(${M*0.5}deg)`;
+        m.style.transform=`rotate(${M*6}deg)`;
+        h.style.transform=`rotate(${H*30}deg)`;
     }
 setInterval(time,1000)
 
